[tool.poetry]
name = "3D-bin-packing"
version = "0.1.0"
description = "3D bin packing implementation"
authors = ["Daniel Montecillo <daniel.montecillo@montecillo.ca>"]

[tool.poetry.dependencies]
numpy = ">=1.23.2"
matplotlib = "==3.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
